--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
-    "postinstall": "quasar prepare"
+    "postinstall": "quasar prepare",
+    "build-android": "quasar build -m capacitor -T android",
+    "dev-android": "quasar dev -m capacitor -T android"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
