--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dev-android": "quasar dev -m capacitor -T android"
   },
   "dependencies": {
+    "@capacitor/app": "^8.0.0",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "pinia": "^3.0.1",
